--- a/react-app/src/styles/main.css
+++ b/react-app/src/styles/main.css
@@ -15,4 +15,46 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.time {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 0 0 10rem 1.6rem;
+}
+
+.time__stamp {
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 6.25rem;
+}
+
+.time__greeting {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.time__greeting-icon {
+  margin-right: 1rem;
+}
+
+.time__greeting-text {
+  text-transform: uppercase;
+  font-weight: 400;
+  color: #ffffff;
+  line-height: 25px;
+  letter-spacing: 3px;
+}
 /*# sourceMappingURL=main.css.map */
